--- a/Project1.ipynb
+++ b/Project1.ipynb
@@ -496,6 +496,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1febcc89-357c-4f0b-b87f-bfc6c859a769",
+   "metadata": {},
+   "source": [
+    "## Descriptive Stats & Evaluation \n",
+    "In order to answer the question a simple descriptive Model is choosen. The question are answered by simply comparing the descriptive statistic. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "29f030e1-d3c4-4c28-bd9f-524003ee7185",
@@ -573,6 +582,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3c05f779-6b68-4ebf-a5bc-b3c53754fbba",
+   "metadata": {},
+   "source": [
+    "Unfortunately, there is no data of the years 2016 and 2019. A reason may is that people weren't able to choose Julia as an option for languages used or desired.\n",
+    "\n",
+    "The data shows that the absolute and relative number of people using Julia is increasing over the years. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "750ee10d-f893-48d6-9e3d-36c7d93c8a5b",
@@ -647,6 +666,18 @@
     "ax_w_jul.yaxis.set_major_formatter(mtick.PercentFormatter(xmax=1))\n",
     "plt.tight_layout()\n",
     "plt.savefig(fname='Pictures/WantsJulia.png')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c52770c-f02b-433a-8c28-01b9b00daf5a",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "Unfortunately, there is no data of the years 2016 and 2019. A reason may is that people weren't able to choose Julia as an option for languages used or desired.\n",
+    "\n",
+    "The data shows that the absolute and relative number of people desire to learn Julia is increasing over the years. "
    ]
   },
   {
@@ -731,6 +762,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "251a314c-9fcb-4202-90e2-a6acb0e82da8",
+   "metadata": {},
+   "source": [
+    "The data shows that the absolute and relative number of people working with Python is increasing over the years. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "id": "ffe6cf88-be7e-4640-a042-ef1f9f9c8620",
@@ -782,6 +821,14 @@
     "ax_w_py.yaxis.set_major_formatter(mtick.PercentFormatter(xmax=1))\n",
     "plt.tight_layout()\n",
     "plt.savefig(fname='Pictures/WantsPy.png')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64b3077c-b795-4c01-997c-579e89e9005b",
+   "metadata": {},
+   "source": [
+    "The data shows that the absolute and relative number of people desire to learn Python is increasing over the years. "
    ]
   },
   {
@@ -872,6 +919,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0a83558d-38ee-4073-91e1-0dc6736fd083",
+   "metadata": {},
+   "source": [
+    "Furthermore, in 2020 data shows that people working in data related jobs are using Julia more than people that are not working in data related jobs"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 46,
    "id": "f2a22c7b-0f9e-49fb-b289-e21db77fb0c7",
@@ -920,6 +975,28 @@
     "ax_w_py.yaxis.set_major_formatter(mtick.PercentFormatter(xmax=1))\n",
     "plt.tight_layout()\n",
     "plt.savefig(fname='Pictures/WantsJulDataPerson.png')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "927d6645-a74a-46ef-82d9-9cf1ba6266d2",
+   "metadata": {},
+   "source": [
+    "Furthermore, in 2020 data shows that people in data related jobs have higher desire to learn Julia more than people that are not working in data related jobs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "875da3ec-898f-4f62-9b14-e3b2acd42283",
+   "metadata": {},
+   "source": [
+    "## Review\n",
+    "\n",
+    "The analysis shows that Julia isn't yet the big player in data science. However, data shows that Julia is getting more known under developers and especially in the data science community. Nevertheless, this analysis is only a first step towards understanding if Julia will become the next big thing.\n",
+    "\n",
+    "There are several questions left:\n",
+    "- Will Julia steadily increase in coming years (Forecast)\n",
+    "- Are there segments that are using Julia heaviliy?\n"
    ]
   }
  ],
